# rust-notes

./: Cargo.toml  build.rs
migrations/2024-01-20-082711_core/: down.sql  up.sql
proto/: notes_service.proto
src/: config.rs  grpc_client_get_notebook.rs  lib.rs  main.rs  model.rs  repository.rs  rest.rs  routes.rs  schema.rs
src/grpc/: mod.rs  notes_service.rs
src/rest/: mod.rs  notebooks.rs  notes.rs
