[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4" }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
schemars = "0.8.16"
tokio = { version = "1.0", features = ["full"] }
aide = { version = "0.13.1", features = ["axum", "redoc"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tower-http = { version = "0.5.1", features = ["trace"] }
