[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"
default-run="rust-notes"


[[bin]]
name = "rust-notes"
path = "src/main.rs"


[[bin]]
name = "grpc-client-get-notebook"
path = "src/grpc_client_get_notebook.rs"


[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
schemars = { version = "0.8.16", features = ["derive"] }
aide = { version = "0.13.1", features = ["axum", "redoc"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tower-http = { version = "0.5.1", features = ["trace"] }
tonic = "0.10"
prost = "0.12"
futures-util = "0.3.30"


[build-dependencies]
tonic-build = "0.10"
